--- a/reactjsbasics/my-app/public/index.css
+++ b/reactjsbasics/my-app/public/index.css
@@ -8,6 +8,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  overflow:visible;
 }
 
 code {
@@ -17,15 +19,16 @@ code {
 
 .Container{
   display: inline-block;
-  width: 250px;
   margin: 10px;
   padding: 10px;
+  width: 50vh;
   border: 2px solid rgb(233, 209, 150);
   border-radius: 5px;
   color: white;
   background-color: rgb(207, 235, 108);
-  box-shadow: 1px 2px 4px rgb(209, 209, 143);
+  box-shadow: 1px 2px 8px rgb(150, 150, 18);
   text-align: center;
+  overflow: hidden;
 }
 
 .card-head{
@@ -33,4 +36,5 @@ code {
   text-align: center;
   text-decoration:underline;
   padding: 10px;
+  color: rgb(143, 26, 123);
 }
