--- a/reactjsbasics/my-app/public/index.css
+++ b/reactjsbasics/my-app/public/index.css
@@ -22,7 +22,7 @@ code {
   display: inline-block;
   margin: 10px;
   padding: 10px;
-  width: 85vh;
+  width:31%;
   border: 2px solid rgb(233, 209, 150);
   border-radius: 5px;
   color: white;
