complted Todo basics

--- a/reactjsbasics/forms/src/index.css
+++ b/reactjsbasics/forms/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container{
+  margin: 0 auto;
+  border: 2px solid red;
+  width: 60vw;
+}
