tried css disable button did'n work

--- a/reactjsbasics/my-app/public/index.css
+++ b/reactjsbasics/my-app/public/index.css
@@ -50,6 +50,11 @@ code {
   font-weight:800;
   color:white;
 }
+button{
+  padding: 25px;
+  margin: 20px;
+}
 button:disabled{
   background-color: red;
+  cursor: pointer;
 }
