--- a/reactjsbasics/my-app/public/index.css
+++ b/reactjsbasics/my-app/public/index.css
@@ -91,3 +91,22 @@ button:disabled{
   border:none
 
 }
+
+nav{
+  width: 100%;
+  background-color: rgb(2, 2, 49);
+  padding: 15px;
+  margin:5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.nav-link{
+  margin: 0 10px;
+  text-decoration: none;
+}
+.nav-link:hover{
+  color: red;
+}
